Allow self-attach